--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.2.10
 certifi==2019.9.11
 Django==3.0.8
 flake8==3.8.3
+gunicorn==20.0.4
 importlib-metadata==1.7.0
 mccabe==0.6.1
 Pillow==7.2.0
